--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.53.0",
-    "node-webcam": "^0.5.0"
+    "node-webcam": "^1.0.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "license": "MIT"
 }
